project_2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec SEMI
    7       | Specifier FunDec CompSt
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error RP
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | Exp LB error RB

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 22 27 36 37 63
INT (258) 19 61
FLOAT (259) 62
ID (260) 15 17 18 20 21 56 57 59 60
SEMI (261) 4 5 6 8 30 32 37 40
COMMA (262) 10 23 42 64
ASSIGNOP (263) 44 45
RELOP (264) 48
PLUS (265) 49
MINUS (266) 50 54
STAR (267) 51
DIV (268) 52
AND (269) 46
OR (270) 47
NOT (271) 55
DOT (272) 59
TYPE (273) 11
LP (274) 20 21 33 34 35 53 56 57
RP (275) 20 21 22 33 34 35 36 53 56 57
LB (276) 19 58 63
RB (277) 19 58 63
LC (278) 13 26
RC (279) 13 26 27
STRUCT (280) 13 14
RETURN (281) 32
IF (282) 33 34
ELSE (283) 34
WHILE (284) 35
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 25 40
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19, on right: 9 10 19 25 43 44
FunDec (41)
    on left: 20 21 22, on right: 6 7
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27, on right: 7 31
StmtList (45)
    on left: 28 29, on right: 26 28
Stmt (46)
    on left: 30 31 32 33 34 35 36 37, on right: 28 33 34 35
DefList (47)
    on left: 38 39, on right: 13 26 38
Def (48)
    on left: 40, on right: 38
DecList (49)
    on left: 41 42, on right: 40 42
Dec (50)
    on left: 43 44, on right: 41 42
Exp (51)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63, on right: 30 32 33 34 35 44 45 46 47 48 49 50 51 52 53 54 55
    58 59 63 64 65
Args (52)
    on left: 64 65, on right: 56 64


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec SEMI
    7       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   22 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . SEMI
    7       | Specifier FunDec . CompSt

    error  shift, and go to state 27
    SEMI   shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


State 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 26

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 27

   27 CompSt: error . RC

    RC  shift, and go to state 41


State 28

    6 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 6 (ExtDef)


State 29

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 33


State 30

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 31

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 32

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 33

   38 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 33


State 34

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 35

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 48


State 36

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 37

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 24 (VarList)


State 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


State 41

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 42

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 29
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 43

   19 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 26

    $default  reduce using rule 43 (Dec)


State 44

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


State 45

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 41 (DecList)


State 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 47

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 48

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


State 49

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 50

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 69
    ParamDec         go to state 37


State 51

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 52

   27 CompSt: error . RC
   36 Stmt: error . RP
   37     | error . SEMI

    SEMI  shift, and go to state 70
    RP    shift, and go to state 71
    RC    shift, and go to state 41


State 53

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 54

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 55

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 60 (Exp)


State 56

   54 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 73


State 57

   55 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


State 58

   53 Exp: LP . Exp RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 75


State 59

   32 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 76


State 60

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 61

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 78


State 62

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 63

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


State 64

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 29
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 80
    Stmt      go to state 64
    Exp       go to state 65


State 65

   30 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 66

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 92


State 67

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 68

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 43
    DecList  go to state 93
    Dec      go to state 45


State 69

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 70

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 71

   36 Stmt: error RP .

    $default  reduce using rule 36 (Stmt)


State 72

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 94

    Exp   go to state 95
    Args  go to state 96


State 73

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    STAR  shift, and go to state 86
    DIV   shift, and go to state 87
    DOT   shift, and go to state 90
    LB    shift, and go to state 91

    $default  reduce using rule 54 (Exp)


State 74

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 55 (Exp)


State 75

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 97
    LB        shift, and go to state 91


State 76

   32 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    SEMI      shift, and go to state 98
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 77

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 99


State 78

   35 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 100


State 79

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 80

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 81

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 82

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 101


State 83

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 102


State 84

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 103


State 85

   50 Exp: Exp MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 104


State 86

   51 Exp: Exp STAR . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 105


State 87

   52 Exp: Exp DIV . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 106


State 88

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 107


State 89

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 108


State 90

   59 Exp: Exp DOT . ID

    ID  shift, and go to state 109


State 91

   58 Exp: Exp LB . Exp RB
   63    | Exp LB . error RB

    error  shift, and go to state 110
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 111


State 92

   44 Dec: VarDec ASSIGNOP Exp .
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 44 (Dec)


State 93

   42 DecList: Dec COMMA DecList .

    $default  reduce using rule 42 (DecList)


State 94

   57 Exp: ID LP RP .

    $default  reduce using rule 57 (Exp)


State 95

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB
   64 Args: Exp . COMMA Args
   65     | Exp .

    COMMA     shift, and go to state 112
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 65 (Args)


State 96

   56 Exp: ID LP Args . RP

    RP  shift, and go to state 113


State 97

   53 Exp: LP Exp RP .

    $default  reduce using rule 53 (Exp)


State 98

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 99

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 114
    LB        shift, and go to state 91


State 100

   35 Stmt: WHILE LP Exp . RP Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 115
    LB        shift, and go to state 91


State 101

   45 Exp: Exp . ASSIGNOP Exp
   45    | Exp ASSIGNOP Exp .
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 45 (Exp)


State 102

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   48    | Exp RELOP Exp .
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    PLUS   shift, and go to state 84
    MINUS  shift, and go to state 85
    STAR   shift, and go to state 86
    DIV    shift, and go to state 87
    DOT    shift, and go to state 90
    LB     shift, and go to state 91

    $default  reduce using rule 48 (Exp)


State 103

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   49    | Exp PLUS Exp .
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    STAR  shift, and go to state 86
    DIV   shift, and go to state 87
    DOT   shift, and go to state 90
    LB    shift, and go to state 91

    $default  reduce using rule 49 (Exp)


State 104

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   50    | Exp MINUS Exp .
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    STAR  shift, and go to state 86
    DIV   shift, and go to state 87
    DOT   shift, and go to state 90
    LB    shift, and go to state 91

    $default  reduce using rule 50 (Exp)


State 105

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   51    | Exp STAR Exp .
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 51 (Exp)


State 106

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   52    | Exp DIV Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 52 (Exp)


State 107

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   46    | Exp AND Exp .
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    RELOP  shift, and go to state 83
    PLUS   shift, and go to state 84
    MINUS  shift, and go to state 85
    STAR   shift, and go to state 86
    DIV    shift, and go to state 87
    DOT    shift, and go to state 90
    LB     shift, and go to state 91

    $default  reduce using rule 46 (Exp)


State 108

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   47    | Exp OR Exp .
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    RELOP  shift, and go to state 83
    PLUS   shift, and go to state 84
    MINUS  shift, and go to state 85
    STAR   shift, and go to state 86
    DIV    shift, and go to state 87
    AND    shift, and go to state 88
    DOT    shift, and go to state 90
    LB     shift, and go to state 91

    $default  reduce using rule 47 (Exp)


State 109

   59 Exp: Exp DOT ID .

    $default  reduce using rule 59 (Exp)


State 110

   63 Exp: Exp LB error . RB

    RB  shift, and go to state 116


State 111

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   58    | Exp LB Exp . RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB
